<resources>
    <string name="global_btn_ok">OK</string>
    <string name="global_btn_yes">Yes</string>
    <string name="global_btn_cancel">Cancel</string>
    <string name="global_btn_save">Save</string>
    <string name="global_btn_new">New</string>
    <string name="global_btn_edit">Edit</string>
    <string name="global_btn_del">Delete</string>
    <string name="global_btn_refresh">Refresh</string>
    <string name="global_btn_close">Close</string>


    <string name="dlg__cannot_start_session">Logged in successfully but cannot start the session because there is a problem with the server. Please try again later.</string>

    <string name="dlg__comm_problem_title">Communication problem</string>
    <string name="dlg__comm_problem_msg">There was a problem communicating with the server. Please try again later.</string>
    <string name="dlg__generic_wait">Please wait…</string>

    <string name="dlg__fb_login_error__title">Facebook login problem</string>
    <string name="dlg__fb_login_error__msg">There is a problem logging in with Facebook. Please try again later.</string>

    <string name="dlg__google_login_error__title">Google login problem</string>
    <string name="dlg__google_login_error__msg">Unable to log in using Google. Please try again later.</string>

    <string name="dlg__invalid_autologin__title">Invalid login</string>
    <string name="dlg__invalid_autologin__msg">Cannot auto login. Invalid username or password. Please tap "Login" button and check if your username and password are correct.</string>

    <string name="dlg__invalid_login__title">Invalid login</string>
    <string name="dlg__invalid_login__msg">Invalid username or password.</string>

    <string name="global_dlg__loggin_in">Logging in…</string>
    <string name="global_dlg__loggin_out">Logging out…</string>

    <string name="dlg__need_relogin__msg">You need to login again because you session has expired due to inactivity.</string>

    <string name="dlg__no_inet__title">No internet</string>
    <string name="dlg__no_inet__msg">There is no connection to internet.</string>

    <string name="dlg__upgrade_needed__title">Upgrade needed</string>
    <string name="dlg__upgrade_needed__msg">You app version is old and unsupported. You need to upgrade.</string>

    <string name="act__main__mi_screen_name">Set your \'Public name\'</string>
    <string name="act__main__mi_registration">Registration</string>
    <string name="act__main__mi_full_registration">Full registration</string>
    <string name="act__main__mi_logout">Logout</string>
    <string name="act__main__mi_choose_login">Select login method</string>

    <string name="act__main__btn_login">Login</string>
    <string name="act__main__tv_no_inet">No internet connection</string>
    <string name="act__main__tv_logged_in">You are logged as &lt;b>%s&lt;/b></string>
    <string name="act__main__tv_logged_in_with_screen_name">You are logged as &lt;b>%1$s&lt;/b> (%2$s)</string>
    <string name="act__main__tv_logged_in_default">You are logged as &lt;b>#user%d&lt;/b></string>
    <string name="act__main__tv_logged_in_default_with_screen_name">You are logged as &lt;b>#user%1$d&lt;/b> (%2$s)</string>
    <string name="act__main__btn_register">Register</string>
    <string name="act__register__title">Registration</string>

    <string name="act__register__login">Login details</string>
    <string name="act__register__et_username_hint">Username</string>
    <string name="act__register__et_username_error_missing">Please enter a username.</string>
    <string name="act__register__et_username_error_taken">This username is already taken by another user. Please choose a different one.</string>
    <string name="act__register__et_username_error_invalid">Invalid username. Must start with a letter; be at least 3 characters long;  contain latin or cyrillic characters or numbers.</string>
    <string name="act__register__et_password_hint">Password</string>
    <string name="act__register__et_password_error_missing">Please enter a password.</string>
    <string name="act__register__et_password_error_invalid">Invalid password. Must be at least 7 characters long.</string>
    <string name="act__register__tv_login_info">Keep your username and password safe and don\'t tell them to anyone.</string>
    <string name="act__register__et_screen_name_hint">Public name</string>
    <string name="act__register__et_screen_name_error_missing">Please enter a public name.</string>
    <string name="act__register__et_screen_name_error_invalid">Invalid public name. Must be at least 3 letters long.</string>
    <string name="act__register__et_screen_name_error_taken">This public name is already taken by another user. Please choose a different one.</string>
    <string name="act__register__tv_screen_name_info">The \'Public name\' is the name that others will know you as. Choose your public name carefully because you will not be able to change it.</string>
    <string name="act__register__btn_register">Register</string>
    <string name="act__select_login__title">Select login method</string>
    <string name="act__select_login__btn_manual">Username and password</string>
    <string name="act__select_login__btn_google">Google</string>
    <string name="act__select_login__btn_facebook">Facebook</string>
    <string name="act__login__et_username_hint">Username</string>
    <string name="act__login__et_password_hint">Password</string>
    <string name="act__login__btn_login">Login</string>
    <string name="act__login__title">Login</string>

    <string name="act__screen_name__title">Screen name</string>
    <string name="act__screen_name__btn_save">Claim</string>
    <string name="act__screen_name__et_screen_name_hint">Public name</string>
    <string name="act__screen_name__et_screen_name_missing">Please enter a public name.</string>
    <string name="act__screen_name__tv_info">The \'Public name\' is the name that others will know you as. Choose your public name carefully because you will not be able to change it.</string>
    <string name="dlg__screen_name_ok__title">Success!</string>
    <string name="dlg__screen_name_ok__msg">You claimed successfully your public name.</string>
    <string name="dlg__register_ok__title">Success!</string>
    <string name="dlg__register_ok__msg">You are registered successfully.</string>
</resources>
