<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".units.screen_name.ActScreenName">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/act__screen_name__tv_info"/>

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/et_screen_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/act__screen_name__et_screen_name_hint"/>

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/act__screen_name__btn_save"/>
</LinearLayout>
