<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              app:layout_behavior="@string/appbar_scrolling_view_behavior"
              tools:context=".units.main.ActMain"
              tools:showIn="@layout/act__main">

    <Button
        android:id="@+id/btn_rctest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="RcTest"/>
    <LinearLayout
        android:id="@+id/v_no_inet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/act__main__tv_no_inet"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/v_not_logged_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/act__main__btn_login"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/act__main__btn_register"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/v_logged_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_logged_in_as"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/act__main__tv_logged_in"/>
    </LinearLayout>
</LinearLayout>
